[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/2d/TX Tileset Grass.png" type="Texture" id=1]
[ext_resource path="res://sactuaries/sanctuary1.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/2d/TX Props.png" type="Texture" id=3]
[ext_resource path="res://maps/2d/map1.gd" type="Script" id=7]

[sub_resource type="TileSet" id=11]
0/name = "TX Tileset Grass.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 256, 256 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=12]
0/name = "TX Props.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 352, 256, 96, 96 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "TX Props.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 416, 352, 64, 64 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "TX Props.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 352, 160, 32, 96 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 32, 32 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 14 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "TX Props.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 416, 192, 32, 64 )
3/tile_mode = 2
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 32, 32 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 15 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="NavigationPolygon" id=16]
vertices = PoolVector2Array( 64, 0, 192, 0, 192, 256, 64, 384, 704, 384, 704, 256 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 3, 2, 5 ) ]
outlines = [ PoolVector2Array( 64, 0, 64, 384, 704, 384, 704, 256, 192, 256, 192, 0 ) ]

[node name="Map1" type="Node2D"]
script = ExtResource( 7 )

[node name="Navegation" type="Navigation2D" parent="."]

[node name="TileMap" type="TileMap" parent="Navegation"]
tile_set = SubResource( 11 )
cell_size = Vector2( 32, 32 )
bake_navigation = true
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 393217, 3, 0, 262144, 4, 0, 262144, 5, 0, 327681, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 6, 20, 0, 0, 21, 0, 0, 22, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 458756, 65539, 0, 262144, 65540, 0, 393217, 65541, 0, 327680, 65542, 0, 0, 65543, 0, 65542, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 2, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 131072, 0, 0, 131073, 0, 7, 131074, 0, 262144, 131075, 0, 262144, 131076, 0, 262144, 131077, 0, 262144, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 65542, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 6, 131094, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 327680, 196611, 0, 262144, 196612, 0, 262144, 196613, 0, 393217, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 6, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 2, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 262144, 262147, 0, 262144, 262148, 0, 262144, 262149, 0, 458756, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 131077, 262165, 0, 0, 262166, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 327680, 327683, 0, 393217, 327684, 0, 262144, 327685, 0, 262144, 327686, 0, 0, 327687, 0, 65542, 327688, 0, 0, 327689, 0, 0, 327690, 0, 2, 327691, 0, 0, 327692, 0, 131077, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 65542, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 393216, 0, 7, 393217, 0, 0, 393218, 0, 262144, 393219, 0, 262145, 393220, 0, 262145, 393221, 0, 262144, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 6, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 65542, 393234, 0, 0, 393235, 0, 131077, 393236, 0, 131077, 393237, 0, 0, 393238, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 262144, 458755, 0, 458753, 458756, 0, 327681, 458757, 0, 262144, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 327680, 524291, 0, 327680, 524292, 0, 262144, 524293, 0, 262144, 524294, 0, 327680, 524295, 0, 393217, 524296, 0, 262144, 524297, 0, 262144, 524298, 0, 262144, 524299, 0, 262144, 524300, 0, 262144, 524301, 0, 262144, 524302, 0, 262145, 524303, 0, 262144, 524304, 0, 458752, 524305, 0, 262144, 524306, 0, 262144, 524307, 0, 327681, 524308, 0, 262145, 524309, 0, 393216, 524310, 0, 6, 589824, 0, 0, 589825, 0, 0, 589826, 0, 262144, 589827, 0, 262144, 589828, 0, 262144, 589829, 0, 262144, 589830, 0, 262144, 589831, 0, 262144, 589832, 0, 262144, 589833, 0, 262144, 589834, 0, 393216, 589835, 0, 262144, 589836, 0, 262144, 589837, 0, 393216, 589838, 0, 262144, 589839, 0, 262144, 589840, 0, 262144, 589841, 0, 262144, 589842, 0, 262144, 589843, 0, 262144, 589844, 0, 393216, 589845, 0, 262144, 589846, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 393217, 655363, 0, 262144, 655364, 0, 262144, 655365, 0, 393217, 655366, 0, 262144, 655367, 0, 458757, 655368, 0, 262144, 655369, 0, 262144, 655370, 0, 327681, 655371, 0, 262144, 655372, 0, 262144, 655373, 0, 262144, 655374, 0, 262144, 655375, 0, 262144, 655376, 0, 458752, 655377, 0, 262144, 655378, 0, 393216, 655379, 0, 262144, 655380, 0, 262144, 655381, 0, 262144, 655382, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 262145, 720899, 0, 393217, 720900, 0, 262144, 720901, 0, 458757, 720902, 0, 262144, 720903, 0, 262144, 720904, 0, 327680, 720905, 0, 262144, 720906, 0, 393216, 720907, 0, 327680, 720908, 0, 262144, 720909, 0, 458752, 720910, 0, 262145, 720911, 0, 262144, 720912, 0, 262144, 720913, 0, 327681, 720914, 0, 262145, 720915, 0, 262144, 720916, 0, 262144, 720917, 0, 458753, 720918, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 196614, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 851968, 0, 0, 851969, 0, 7, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 2, 851975, 0, 0, 851976, 0, 0, 851977, 0, 7, 851978, 0, 1, 851979, 0, 65542, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 65541, 851984, 0, 65541, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 65542, 917512, 0, 0, 917513, 0, 0, 917514, 0, 65542, 917515, 0, 6, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 131077, 983043, 0, 7, 983044, 0, 7, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 7, 983054, 0, 0, 983055, 0, 65541, 983056, 0, 0, 983057, 0, 65542, 983058, 0, 65542, 983059, 0, 6, 983060, 0, 1, 983061, 0, 0, 983062, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 1, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 2, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 65541, 1048598, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 65541, 1114119, 0, 2, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 1, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1179648, 0, 1, 1179649, 0, 0, 1179650, 0, 65541, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 6, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 1, 1179670, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 2, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 65541, 1245200, 0, 0, 1245201, 0, 6, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 65541 )

[node name="TileMap2" type="TileMap" parent="Navegation"]
tile_set = SubResource( 12 )
cell_size = Vector2( 32, 32 )
show_collision = true
bake_navigation = true
format = 1
tile_data = PoolIntArray( 589842, 0, 0, 589843, 0, 1, 589844, 0, 2, 655378, 0, 65536, 655379, 0, 65537, 655380, 0, 65538, 720914, 0, 131072, 720915, 0, 131073, 720916, 0, 131074, 1048580, 1, 0, 1048581, 1, 1, 1114116, 1, 65536, 1114117, 1, 65537 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navegation"]
navpoly = SubResource( 16 )

[node name="GeneratorMobs" type="Position2D" parent="Navegation"]
position = Vector2( 128, 32 )

[node name="Mobs" type="Node2D" parent="Navegation"]

[node name="Sanctuaries" type="Node2D" parent="Navegation"]

[node name="Sanctuary1" parent="Navegation/Sanctuaries" instance=ExtResource( 2 )]
position = Vector2( 626, 304 )

[connection signal="generate_mobs" from="." to="." method="_on_Map1_generate_mobs"]
[connection signal="destroy" from="Navegation/Sanctuaries/Sanctuary1" to="." method="_on_Sanctuary1_destroy"]
